@@ -1,4 +1,12 @@
 ==============================================================
+LuaTeX 1.09.2 2019-01-19
+==============================================================
+
+This is a transitional release to LuaTeX 1.10 for TeX Live 2019
+
+
+
+==============================================================
 LuaTeX 1.09 2018-10-23
 ==============================================================
 
